# LiText

./: README.md  docker-compose.yml
LiText_backend/: CeleryDockerfile  main.py  pyproject.toml
LiText_backend/litext_backend/: manage.py
LiText_backend/litext_backend/litext_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
LiText_backend/litext_backend/litext_login/: __init__.py  apps.py  serializers.py  signals.py  tasks.py  urls.py  views.py
LiText_backend/litext_backend/litext_text/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
LiText_backend/litext_backend/litext_text/migrations/: 0001_initial.py  0002_alter_textblock_text.py  0003_textblock_user.py  0004_textblocklink.py  0005_alter_textblocklink_link.py
